--- a/sass/parciales/_contacto.scss
+++ b/sass/parciales/_contacto.scss
@@ -15,7 +15,7 @@ $ancho: 1400px;
         display: inline-flex;
         flex-direction: column;
         flex-wrap: wrap;
-        padding: 30px 5px;
+        padding: 0;
     }
 
     &__form {
@@ -30,10 +30,15 @@ $ancho: 1400px;
 
        @include tablet{
             font-size: 1.3rem;
+            text-align: center;
         } 
 
         @include movil{
-            width: 380px;
+
+            font-size: 1rem;
+            width: 100%;
+            margin: 0;
+            text-align: center;
         }
 
     }
@@ -46,6 +51,11 @@ $ancho: 1400px;
         background: rgb(219, 223, 215);
         color: rgb(6, 6, 57);
 
+        @include movil {
+            
+            margin: 10px 0;
+        }
+
         &:hover {
 
             background-color: rgb(235, 228, 214);
@@ -57,8 +67,6 @@ $ancho: 1400px;
     }
 
     &__ubicacion {
-
-
         display: flex;
         flex-direction: column;
         align-items: stretch;
@@ -68,8 +76,13 @@ $ancho: 1400px;
         width: $ancho/2;
         padding: 10px;
 
+        h2{
+            text-align: center;            
+        }
+
         @include movil {
-            width: 380px;
+            width: 100%;
+            margin: 20px 0;
         }
 
         &--cont {
@@ -92,7 +105,8 @@ $ancho: 1400px;
                 padding-right: 10px;
 
                 @include movil{
-                    font-size: 1.5rem;
+                    margin-top: 0;
+                    font-size: 1rem;
                     text-align: center;
                 }
 
