--- a/sass/parciales/_footerYheader.scss
+++ b/sass/parciales/_footerYheader.scss
@@ -2,8 +2,7 @@
 $sombreado:0 0 8px 0 rgba(0, 0, 0, .5);
 $fuenteAzul: rgb(24, 33, 99);
 $borde: 20px;
-$fuentePrincipal:'Play',
-sans-serif;
+$fuentePrincipal:'Play',sans-serif;
 
 
 /*----------HEADER--------*/
@@ -31,11 +30,11 @@ header {
         height: 5rem;
 
         @include tablet {
-            height: 8rem;
+            height: 6rem;
         }
 
         @include movil {
-            height: 6rem;
+            height: 4rem;
         }
     }
 
@@ -72,7 +71,7 @@ header {
                 text-decoration: none;
                 text-align: center;
                 font-weight: bold;
-                font-size: 2rem;
+                font-size: 1.4rem;
                 padding-bottom: 10px;
             }
 
@@ -80,13 +79,12 @@ header {
                 text-decoration: none;
                 text-align: center;
                 font-weight: bold;
-                font-size: 1.5rem;
+                font-size: 1rem;
                 padding-bottom: 10px;
             }
         }
     }
 }
-
 
 .contenedor-slider {
     margin: auto;
@@ -94,8 +92,6 @@ header {
     margin-bottom: 30px;
     width: 80%;
     box-shadow: $sombreado;
-
-
 }
 
 .carousel-item {
@@ -105,15 +101,11 @@ header {
         object-fit: cover;
     }
 
-    &__video{
+    &__video {
         width: 100%;
         height: 30rem;
         object-fit: cover;
-
-      
     }
-
-
 }
 
 
@@ -130,7 +122,7 @@ footer {
 
 
     @include tablet {
-        height: 40vh;
+        height: 100%;
         padding-top: 5px;
         overflow-x: hidden;
         overflow-y: hidden;
@@ -138,7 +130,7 @@ footer {
     }
 
     @include movil {
-        height: 45vh;
+        height: 100%;
         padding-top: 5px;
         overflow-x: hidden;
         overflow-y: hidden;
@@ -150,7 +142,7 @@ footer {
     display: grid;
     grid-template-columns: 0.7fr 1.3fr 1fr;
     grid-template-rows: 1fr;
-    grid-template-areas:"direc iconos sec";
+    grid-template-areas: "direc iconos sec";
     margin-left: 20px;
 
 
@@ -159,7 +151,7 @@ footer {
         flex-direction: column;
         flex-wrap: nowrap;
     }
-   
+
 
     &__direc {
         grid-area: direc;
@@ -172,18 +164,20 @@ footer {
             text-align: center;
             color: $fuenteAzul;
 
-            @include tablet{
-                font-size: 2rem;
+            @include tablet {
+                font-size: 1.5rem;
             }
+
             p {
                 color: rgb(225, 21, 21);
                 font-family: 'Play', sans-serif;
                 font-weight: bold;
                 font-size: 1rem;
-                @include tablet{
-                    font-size: 1.5rem;
-                }            
-            }           
+
+                @include tablet {
+                    font-size: 1rem;
+                }
+            }
         }
     }
 
@@ -191,26 +185,24 @@ footer {
         grid-area: iconos;
         margin-left: 80px;
 
-        @include movil{
-                
-            
-            margin: 0 ;
+        @include movil {
+            margin: 0;
         }
 
         img {
             height: 6rem;
             padding-left: 180px;
 
-            @include tablet{
-                height: 8rem;
+            @include tablet {
+                height: 6rem;
                 padding-left: 100px;
             }
 
-            @include movil{
-                
-                height: 6rem;
-                padding: 0 0 0 50px;
-                margin: 20px 0 ;
+            @include movil {
+
+                height: 5rem;
+                padding: 0 0 0 20px;
+                margin: 10px 0;
             }
 
         }
@@ -221,14 +213,14 @@ footer {
             justify-content: center;
             align-items: flex-end;
 
-            @include tablet{
+            @include tablet {
                 margin-right: 100px;
             }
 
-            @include movil{
+            @include movil {
                 margin-right: 50px;
             }
-        
+
 
             &__socialIcono {
                 margin-left: 20px;
@@ -239,47 +231,56 @@ footer {
                 border-radius: $borde+10;
                 color: rgb(242, 94, 94);
                 animation: scale-in-center 3.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s 1 both;
-        
-                @include tablet{
-                    width: 80px;
-                height: 80px;
-                border-radius: $borde+20;
-                }
-        
-                @include movil{
+
+                @include tablet {
                     width: 70px;
-                height: 70px;
-                border-radius: $borde+20;
+                    height: 70px;
+                    border-radius: $borde+20;
                 }
-        
+
+                @include movil {
+                    width: 55px;
+                    height: 55px;
+                    border-radius: $borde+20;
+                }
+
                 &:hover {
                     background: rgb(201, 124, 124);
-                    color: rgb(6, 6, 165);        
+                    color: rgb(6, 6, 165);
                 }
-        
+
                 i {
                     font-size: 2rem;
                     line-height: 50px;
                     padding-left: 8px;
 
                     @include tablet {
-                        font-size: 3.5rem;
-                        line-height: 80px;
-                    }                    
-                    @include movil {
-                        font-size: 2.6rem;
+                        font-size: 3rem;
                         line-height: 65px;
-                        padding-left: 12px;
                     }
-                }        
-            }                       
+
+                    @include movil {
+                        font-size: 2.5rem;
+                        line-height: 55px;
+                        padding-right: 10px;
+                    }
+                }
+            }
         }
-                
+
         .text {
             text-align: center;
+
+            @include tablet {
+                padding-right: 150px;
+                font-size: 1.2rem;
+                            }
+
+
             @include movil {
-                font-size: 1.5rem;;
-            }        
+                padding: 0;
+                font-size: 1rem;
+            }
         }
 
         .line {
@@ -289,15 +290,15 @@ footer {
             height: 1px;
             background: tomato;
             box-shadow: $sombreado;
-        
+
             @include tablet {
                 width: 100%;
                 max-width: 500px;
             }
 
             @include movil {
-                width: 100%;
-                max-width: 350px;
+                width: 80%;
+                max-width: 300px;
             }
         }
 
@@ -328,6 +329,7 @@ footer {
                 font-size: 1.1rem;
             }
         }
+
         @include tablet {
             display: none;
         }
