--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -2,8 +2,6 @@
 
 /*--------------SECCION PRODUCTOS--------*/
 
-
-
 .btn {
     margin-left: 250px;
 
@@ -13,7 +11,7 @@
     }
 
     @include movil {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 }
 
@@ -25,9 +23,6 @@
 #btnradio3:checked~.galeria>.lentes {
     display: none;
 }
-
-
-
 
 
 .galeria {
@@ -51,7 +46,8 @@
 
 
             @include movil {
-                height: 13rem;
+                height: 10rem;
+                margin-left: 40px;
 
             }
         }
@@ -64,6 +60,11 @@
     box-shadow: $sombreado;
     height: 300px;
     margin-bottom: 60px;
+
+
+    @include movil{
+        height: 200px;
+    }
 
     &:hover {
         z-index: 1;
@@ -88,6 +89,10 @@
     box-shadow: $sombreado;
     height: 300px;
     margin-bottom: 60px;
+
+    @include movil{
+        height: 200px;
+    }
 
     &:hover {
         z-index: 1;
