--- a/sass/main.css
+++ b/sass/main.css
@@ -27,7 +27,7 @@ header {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .navbar-brand img {
     height: 4rem;
   }
@@ -77,7 +77,7 @@ header {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .barraMenu li .nav-link {
     text-decoration: none;
     text-align: center;
@@ -130,7 +130,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   footer {
     height: 100%;
     padding-top: 5px;
@@ -213,7 +213,7 @@ footer {
   margin-left: 80px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos {
     margin: 0;
   }
@@ -231,7 +231,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos img {
     height: 5rem;
     padding: 0 0 0 20px;
@@ -257,7 +257,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos .socialMedia {
     margin-right: 50px;
   }
@@ -283,7 +283,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos .socialMedia__socialIcono {
     width: 55px;
     height: 55px;
@@ -309,7 +309,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos .socialMedia__socialIcono i {
     font-size: 2.5rem;
     line-height: 55px;
@@ -328,7 +328,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos .text {
     padding: 0;
     font-size: 1rem;
@@ -352,7 +352,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grillaFooter__iconos .line {
     width: 80%;
     max-width: 300px;
@@ -412,7 +412,7 @@ footer {
   padding: 20px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla p {
     text-align: center;
     width: 100%;
@@ -433,7 +433,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla {
     padding: 0;
     margin: 0;
@@ -453,7 +453,7 @@ footer {
       flex-wrap: wrap;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla__catalogoPrin {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -481,7 +481,7 @@ footer {
           box-shadow: 1px 2px 10px 1px rgba(242, 161, 161, 0.89);
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla__catalogoPrin--img {
     width: 100%;
     border-radius: 20px;
@@ -508,7 +508,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla__banner {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
@@ -540,7 +540,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .grilla__banner--img {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -562,7 +562,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .marcas {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -581,7 +581,7 @@ footer {
   margin-left: 250px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .marcas__img {
     width: 8rem;
     margin-left: 5rem;
@@ -613,7 +613,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .btn {
     font-size: 1rem;
   }
@@ -642,7 +642,7 @@ footer {
   margin-left: 120px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .galeria__contVideo {
     margin-left: 10px;
   }
@@ -655,7 +655,7 @@ footer {
           animation: fade-in-fwd 3s cubic-bezier(0.39, 0.575, 0.565, 1) 4s both;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .galeria__contVideo--video {
     height: 10rem;
     margin-left: 40px;
@@ -670,7 +670,7 @@ footer {
   margin-bottom: 60px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .lentes {
     height: 200px;
   }
@@ -704,7 +704,7 @@ footer {
   margin-bottom: 60px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .lentesSol {
     height: 200px;
   }
@@ -740,7 +740,7 @@ footer {
   border-radius: 5px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc {
     border: #47138b solid 1px;
     width: 300px;
@@ -753,7 +753,7 @@ footer {
   list-style: none;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc ul {
     padding: 0;
   }
@@ -771,7 +771,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc ul li {
     font-size: 1rem;
   }
@@ -784,7 +784,7 @@ footer {
   font-size: 1rem;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc td {
     padding-right: 5px;
     margin: 0;
@@ -810,7 +810,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc__cabecera td {
     font-size: 1rem;
   }
@@ -820,7 +820,7 @@ footer {
   background-color: white;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc__fila {
     width: 50px;
   }
@@ -837,7 +837,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc__fila td {
     font-size: 1rem;
   }
@@ -858,7 +858,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .tablaObrasoc__filaAlt td {
     font-size: 1rem;
   }
@@ -880,7 +880,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contenedor_obrasoc {
     margin-bottom: 10px;
   }
@@ -891,10 +891,10 @@ footer {
   padding-right: 20px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contenedor_obrasoc img {
     height: 40px;
-    margin-left: 10px;
+    margin-left: 15px;
   }
 }
 
@@ -913,7 +913,7 @@ footer {
           animation: color-banNosotros-2x 1s linear infinite alternate both;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .banner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -933,7 +933,7 @@ footer {
   height: 80px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .banner img {
     width: 50%;
     -o-object-fit: contain;
@@ -950,7 +950,7 @@ footer {
   padding: 40px 20px 0 10px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .banner__text {
     font-size: 1rem;
     font-weight: bold;
@@ -963,7 +963,7 @@ footer {
   border-right: rgba(250, 144, 125, 0.448) solid 3px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .banner .borde {
     padding: 10px;
     margin: 0;
@@ -992,7 +992,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario {
     display: -ms-grid;
     display: grid;
@@ -1023,7 +1023,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario__img1 {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
@@ -1051,7 +1051,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario__img2 {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
@@ -1079,7 +1079,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario__img3 {
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
@@ -1107,7 +1107,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario__img4 {
     display: none;
   }
@@ -1131,7 +1131,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario__img5 {
     display: none;
   }
@@ -1151,7 +1151,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .muestrario__img1, .muestrario__img2, .muestrario__img3, .muestrario__img4, .muestrario__img5 {
     height: 250px;
     width: 140px;
@@ -1185,7 +1185,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -1219,7 +1219,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__form {
     font-size: 1rem;
     width: 100%;
@@ -1237,7 +1237,7 @@ footer {
   color: #060639;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__boton {
     margin: 10px 0;
   }
@@ -1275,7 +1275,7 @@ footer {
   text-align: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__ubicacion {
     width: 100%;
     margin: 20px 0;
@@ -1292,7 +1292,7 @@ footer {
   margin: 5px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__ubicacion--cont {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1315,7 +1315,7 @@ footer {
   padding-right: 10px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__ubicacion--cont p {
     margin-top: 0;
     font-size: 1rem;
@@ -1329,7 +1329,7 @@ footer {
   margin-right: 15px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .contacto__ubicacion--cont iframe {
     width: 100%;
   }
@@ -1354,7 +1354,7 @@ body {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   body {
     overflow-x: hidden;
   }
@@ -1375,7 +1375,7 @@ body main {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   body main {
     overflow-x: hidden;
     overflow-y: hidden;
@@ -1414,7 +1414,7 @@ body h2 {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   body h2 {
     font-size: 1.8rem;
     font-weight: bold;
@@ -1451,7 +1451,7 @@ body p {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   body p {
     font-size: 1rem;
   }
@@ -1469,7 +1469,7 @@ body ul {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   body ul {
     font-size: 1rem;
   }
