--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -9,7 +9,7 @@
 
 @mixin movil {
 
-    @media screen and (max-width: 320px) 
+    @media screen and (min-width: 320px) and (max-width: 480px)
     {
         @content;
     }
