--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -86,9 +86,9 @@
         }
 
         @include movil {
-            align-self: center;
-            height: 450px;
+            align-items: center;
             width: 100%;
+            height: 400px;
         }
 
 
@@ -113,8 +113,8 @@
 
             @include movil {
                 display: flex;
-                align-items: center;
-                height: 4rem;
+                height: 3rem;
+                margin:auto;
 
             }
         }
