--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -4,6 +4,57 @@
 
 
 
+.hero {
+    width: 100%;
+    height: 90vh;
+    background: linear-gradient(to bottom,
+            rgba(247, 143, 119, 0.6),
+            rgba(29, 241, 171, .6),
+            rgba(7, 109, 150, .45)), url(../media/fondo3.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+
+    @include tablet {
+        height: 95vh;
+    }
+}
+
+.contenedor-slider {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    width: 80%;
+    box-shadow: $sombreado;
+
+    @include tablet {
+        margin-top: 10px;
+        height: 80vh;
+        margin-bottom: 5px;
+    }
+}
+
+.carousel-item {
+    &__img {
+        width: 90%;
+        height: 30rem;
+        object-fit: cover;
+    }
+
+    &__video {
+        width: 100%;
+        height: 30rem;
+        object-fit: cover;
+    }
+}
+
+.wave {
+
+    height: 80px;
+    overflow: hidden;
+
+
+}
+
 
 
 .grilla {
@@ -27,7 +78,7 @@
         flex-wrap: wrap;
     }
 
-    @include movil {       
+    @include movil {
         padding: 0;
         margin: 0;
         width: 100%;
@@ -44,10 +95,10 @@
 
 
         @include movil {
-            display: flex;           
-            flex-direction: column;           
-            flex-wrap: wrap;           
-            align-items: flex-start;           
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-items: flex-start;
             align-content: flex-start;
 
         }
@@ -60,11 +111,11 @@
             margin-bottom: 50px;
             box-shadow: 1px 2px 10px 1px rgba(242, 161, 161, 0.89);
 
-            @include movil{
-               width: 100%;
-               border-radius: $borde;
+            @include movil {
+                width: 100%;
+                border-radius: $borde;
             }
-           
+
         }
     }
 
@@ -114,7 +165,7 @@
             @include movil {
                 display: flex;
                 height: 3rem;
-                margin:auto;
+                margin: auto;
 
             }
         }
