--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -56,6 +56,7 @@
 }
 
 .lentes {
+    position: relative;
     width: 320px;
     box-shadow: $sombreado;
     height: 300px;
@@ -66,25 +67,27 @@
         height: 200px;
     }
 
-    &:hover {
-        z-index: 1;
-        animation: kenburns-top 3s ease-out both;
-    }
+      &:hover {
+        animation: kenburns-top 0.5s ease-out both;
+    }  
 
+    &:hover .overlay{
+        height:100%;
+        cursor: pointer;
+    }   
+
+    
     img {
         height: 100%;
         width: 100%;
         object-fit: cover;
     }
 
-    h5 {
-        text-align: center;
-        box-shadow: $sombreado;
-        background-color: rgb(254, 206, 211);
-    }
+  
 }
 
 .lentesSol {
+    position: relative;
     width: 320px;
     box-shadow: $sombreado;
     height: 300px;
@@ -95,22 +98,41 @@
     }
 
     &:hover {
-        z-index: 1;
-        animation: kenburns-top 3s ease-out both;
+        animation: kenburns-top 0.5s ease-out both;
     }
+
+    &:hover .overlay{
+        height:100%;
+        cursor: pointer;
+    } 
 
     img {
         height: 100%;
         width: 100%;
         object-fit: cover;
-
-
     }
 
-    h5 {
-        text-align: center;
-        box-shadow: $sombreado;
-        background-color: rgb(254, 206, 211);
-
-    }
+  
 }
+
+
+.overlay{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background:rgba(65, 1, 58, 0.249) ;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: .5s ease;
+}
+
+.overlay h2{
+    color:white;
+    font-weight: 300;
+    font-size:1.5rem;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+}
+
