--- a/sass/main.css
+++ b/sass/main.css
@@ -10,7 +10,6 @@ header {
 }
 
 .navegador {
-  background: transparent;
   width: 100%;
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
@@ -84,34 +83,6 @@ header {
     font-size: 1rem;
     padding-bottom: 10px;
   }
-}
-
-.contenedor-slider {
-  margin: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  width: 80%;
-  -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-}
-
-.carousel-item__img {
-  width: 90%;
-  height: 30rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.carousel-item__video {
-  width: 100%;
-  height: 30rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.wave {
-  height: 80px;
-  overflow: hidden;
 }
 
 /*------------FOOTER------------------*/
@@ -407,11 +378,6 @@ footer {
 .hero {
   width: 100%;
   height: 90vh;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(247, 143, 119, 0.6)), color-stop(rgba(29, 241, 171, 0.6)), to(rgba(7, 109, 150, 0.45))), url(../media/fondo3.jpg);
-  background: linear-gradient(to bottom, rgba(247, 143, 119, 0.6), rgba(29, 241, 171, 0.6), rgba(7, 109, 150, 0.45)), url(../media/fondo3.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
 }
 
 @media screen and (max-width: 768px) {
@@ -420,7 +386,38 @@ footer {
   }
 }
 
+.contenido__video {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/* Estilos para la etiqueta "video" con la calse (.video)  */
+.video {
+  position: absolute;
+  max-width: 300%;
+  width: 100%;
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 768px) {
+  .video {
+    width: 130%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .video {
+    width: 300%;
+  }
+}
+
 .contenedor-slider {
+  margin: auto;
   margin-top: 50px;
   margin-bottom: 30px;
   width: 80%;
@@ -436,15 +433,16 @@ footer {
   }
 }
 
-.carousel-item__img {
-  width: 90%;
-  height: 30rem;
-  -o-object-fit: cover;
-     object-fit: cover;
+.carousel-item {
+  /*  &__video {
+        width: 100%;
+        height: 30rem;
+        object-fit: cover;
+    } */
 }
 
-.carousel-item__video {
-  width: 100%;
+.carousel-item__img {
+  width: 90%;
   height: 30rem;
   -o-object-fit: cover;
      object-fit: cover;
@@ -704,8 +702,8 @@ footer {
 .galeria__contVideo--video {
   padding-right: 50px;
   height: 320px;
-  -webkit-animation: fade-in-fwd 3s cubic-bezier(0.39, 0.575, 0.565, 1) 4s both;
-          animation: fade-in-fwd 3s cubic-bezier(0.39, 0.575, 0.565, 1) 4s both;
+  -webkit-animation: fade-in-fwd 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
+          animation: fade-in-fwd 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) 2.5s both;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
