--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -4,23 +4,45 @@
 
 
 
-.hero {
+ .hero {
     width: 100%;
     height: 90vh;
-    background: linear-gradient(to bottom,
-            rgba(247, 143, 119, 0.6),
-            rgba(29, 241, 171, .6),
-            rgba(7, 109, 150, .45)), url(../media/fondo3.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
 
     @include tablet {
         height: 95vh;
     }
 }
+ 
+ .contenido__video{
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;      
+    
+   }
+   
+   /* Estilos para la etiqueta "video" con la calse (.video)  */
+   .video{
+    position: absolute;
+    max-width: 300%;
+    width: 100%;
+    opacity: 0.8;
+    
+    @include tablet{
+        width: 130%;
+    }    
+   
+    @include movil{
+        width: 300%;
+    }   
+
+   }
 
 .contenedor-slider {
+    margin: auto;
     margin-top: 50px;
     margin-bottom: 30px;
     width: 80%;
@@ -40,11 +62,11 @@
         object-fit: cover;
     }
 
-    &__video {
+   /*  &__video {
         width: 100%;
         height: 30rem;
         object-fit: cover;
-    }
+    } */
 }
 
 .wave {
