--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -62,11 +62,7 @@
         object-fit: cover;
     }
 
-   /*  &__video {
-        width: 100%;
-        height: 30rem;
-        object-fit: cover;
-    } */
+  
 }
 
 .wave {
@@ -195,11 +191,10 @@
 }
 
 .marcas {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 
-    @include tablet {
-        margin-bottom: 30px;
-    }
+
+    
 
     @include movil {
         display: flex;
@@ -209,11 +204,18 @@
 
     &__img {
         width: 10rem;
-        margin-left: 250px;
+        margin-left: 220px;
+
+        @include tablet{
+            margin-left: 80px;
+            width: 8rem;
+        }
+
 
         @include movil {
-            width: 8rem;
-            margin-left: 5rem;
+            width: 6rem;
+            margin-left: 6rem;
+            padding-top: 1rem;
         }
 
     }
@@ -229,3 +231,4 @@
         }
     }
 }
+
