--- a/sass/main.scss
+++ b/sass/main.scss
@@ -153,11 +153,11 @@ body {
 /*--se usa secc obrasoc--*/
 @keyframes color-change-2x {
     0% {
-        background: #d3acbd;
+        background: #dfbbcb;
     }
 
     100% {
-        background: #400a60;
+        background: #ce6196;
     }
 }
 
